# napari-properties-plotter

./: LICENSE  README.md  mkdocs.yml  setup.cfg  setup.py  tox.ini
docs/: index.md
examples/: points.py
napari_properties_plotter/: __init__.py  _dock_widget.py  components.py  napari.yaml  property_plotter.py  utils.py
napari_properties_plotter/_tests/: test_dock_widget.py
