[metadata]
name = napari-properties-plotter
author = Lorenzo Gaifas
author_email = lorenzo.gaifas@gmail.com
license = BSD-3
url = https://github.com/brisvag/napari-properties-plotter
description = A napari plugin that automatically generates interactive plots based on layer properties.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/brisvag/napari-properties-plotter/issues
    Documentation = 'https://github.com/brisvag/napari-properties-plotter#README.md'
    Source Code = https://github.com/brisvag/napari-properties-plotter
    User Support = https://github.com/brisvag/napari-properties-plotter/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-properties-plotter = napari_properties_plotter
